tests/valid/noMathMul.ts
// @ts-nocheck
const a = new Vector3(1, 2, 3);
const c = a.mul(5);
