tests/invalid/noObjectMath.ts
// @ts-nocheck
const a = new Vector3(1, 2, 3);
const b = new Vector3(4, 5, 6);
const c = a + b;
